--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,9 @@ Wrapping all content to prevent horizontal scrolling.
 #timeline {
   position: absolute;
   top: 0;
-  z-index: 5; }
+  z-index: 5;
+  width: 15px;
+  background: yellow; }
   #timeline div {
     position: absolute;
     width: 100%; }
