--- a/css/_intro.scss
+++ b/css/_intro.scss
@@ -82,7 +82,7 @@
   }
   
   a,
-  .no-break{
+  header span{
     white-space: nowrap;
   }
   
@@ -177,7 +177,7 @@
     font-weight: 700;
     font-family: Georgia, serif;
     
-    .no-break{
+    span{
       font-size: 0.6em;
     }
   }
